@@ -36,5 +36,6 @@ pyfll-installer (001-1) unstable; urgency=low
   * enable/disable format_with comboBox 
   * enable/disable table_mountpoint comboBox 
   * partition_count fixed 
+  * reload tableWidget after partition tool ends, TEST 
 
- -- Horst Tritremmel <hjt@sidux.com>  Wed, 30 Apr 2008 18:56:48 +0200
+ -- Horst Tritremmel <hjt@sidux.com>  Mon, 05 May 2008 15:22:27 +0200
